# scilib

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  LICENSE  README.md  ThirdPartyNotices.txt  azure-pipelines.yml
.github/workflows/: cmake-linux.yml  cmake-macos.yml  cmake.yml  codecov.yml  codeql-analysis.yml
bench/: CMakeLists.txt  bench_axpy.cpp  bench_dot.cpp  bench_eigh.cpp  bench_eigs.cpp  bench_finite_difference.cpp  bench_matrix_product.cpp  bench_matrix_vector_product.cpp  bench_mkl_dgemm.cpp  bench_transpose.cpp  bench_views.cpp
cmake/: FindMKL.cmake  FindOpenBLAS.cmake  ScilibConfig.cmake.in  scilibConfig.cmake.in
examples/: CMakeLists.txt  aliasing.cpp  arithmetic.cpp  const_correctness.cpp  for_each_extents.cpp  for_each_in_extents.cpp  matrix_diag.cpp  matrix_io.cpp  matrix_power.cpp  mdarray_properties.cpp  random_matrix.cpp  solve_ivp.cpp  submatrix_views.cpp  transposed.cpp
include/scilib/: constants.h  integrate.h  linalg.h  mdarray.h  numlib.h  statistics.h  traits.h
include/scilib/integrate_impl/: quad.h  solve_ivp.h  trapz.h
include/scilib/linalg_impl/: auxiliary.h  axpy.h  blas1_add.h  blas1_axpy.h  blas1_copy.h  blas1_dot.h  blas1_dot_product.h  blas1_idx_abs_max.h  blas1_idx_abs_min.h  blas1_scale.h  blas1_swap_elements.h  blas1_vector_abs_sum.h  blas1_vector_norm2.h  blas2_matrix_vector_product.h  blas2_matrix_vector_product.h.bak  blas3_matrix_product.h  blas3_matrix_product.h.bak  det.h  dot_product.h  eigenvalue.h  element_wise_math.h  expm.h  inv.h  lapack_matrix_decomposition.h  lapack_types.h  linsolve.h  lstsq.h  matrix_decomposition.h  matrix_det.h  matrix_norm.h  matrix_power.h  matrix_product.h  scale.h  scaled.h  solve.h  sort.h  swap_elements.h  trace.h  transposed.h
include/scilib/mdarray_impl/: column.h  copy.h  copy_n.h  diag.h  for_each_in_extents.h  matrix.h  matrix_bak.h  matrix_diag.h  mdarray_bits.h  mdarray_ext.h  mdspan_iterator.h  mkl_allocator.h  operations.h  row.h  slice.h  sort.h  support.h  swap_elements.h  type_aliases.h  vector.h  vector_bak.h
include/scilib/stats_impl/: stats_bits.h
lib/: CMakeLists.txt  det.cpp  dopri5.cpp  dormand_prince.cpp  eigenvalue.cpp  expm.cpp  matrix_det.cpp  rk45.cpp  runge_kutta_fehlberg.cpp  trapz.cpp
pipelines/: jobs-linux.yml  jobs-macos.yml  jobs-windows.yml
src/: det.cpp  eigenvalue.cpp
tests/: CMakeLists.txt  test_array3d.cpp  test_array4d.cpp  test_integrate.cpp  test_integrate_trapz.cpp  test_linalg_aux.cpp  test_linalg_blas1.cpp  test_linalg_blas2.cpp  test_linalg_blas3.cpp  test_linalg_eigenvalue.cpp  test_linalg_element_wise_math.cpp  test_linalg_expm.cpp  test_linalg_linsolve.cpp  test_linalg_lstsq.cpp  test_linalg_matrix_decomp.cpp  test_linalg_matrix_det.cpp  test_linalg_matrix_inv.cpp  test_linalg_matrix_norm.cpp  test_linalg_matrix_power.cpp  test_linalg_solve.cpp  test_linalg_trace.cpp  test_linalg_transposed.cpp  test_matrix.cpp  test_mdspan_iterator.cpp  test_stats.cpp  test_vector.cpp
